$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-11-28 [B] Fixed intermediate image display (thread ID 62581) {Nibbler}
2009-11-28 [B] Fixed private album display (thread ID 62659) {Nibbler}
2009-11-27 [O] Removed double entry from debug_output {GauGau}
2009-11-27 [C] Added color attribute to expand/collapse links {GauGau}
2009-11-23 [A] Added plugin hook 'fullsize_html' (thread ID 62592) {eenemeenemuu}
2009-11-20 [B] Fixed linked picture count on album details {eenemeenemuu}
2009-11-20 [C] Fixed filmstrip hopping around if prev/next buttons get hidden (thread ID 62562) {Timo}
2009-11-18 [B] Fixed filmstrip showing (after scrolling) the same image several times (thread ID 62461) {Timo}
2009-11-18 [A] Added Polish language file (user contribution) {eenemeenemuu}
2009-11-17 [B] Fixed error message after guests upload files with swf uploader (thread ID 62522) {eenemeenemuu}
2009-11-17 [M] Added old bridge files to delete file array (thread ID 62519) {eenemeenemuu}
2009-11-16 [C] Added transparency to navbar images {GauGau}
2009-11-16 [C] Added missing navbar images to standard themes (thread ID 62511) {eenemeenemuu}
2009-11-16 [M] Added message if no pictures were moved in picmgr.php (thread ID 62494) {eenemeenemuu}
2009-11-16 [S] Release of cpg1.5.2 (beta) for the public {GauGau}
2009-11-12 [B] Fixed IE category creation bug (thread ID 62441) {eenemeenemuu}
2009-10-12 [B] Fix missing user admin buttons (thread ID 62046) {Paver}
2009-10-12 [A] Allow theme to override default pic_info and slideshow buttons on displayimage (thread ID 61877) {Paver}